editors/tree-sitter-musa/grammar.js
    source_file: ($) => choice($.piece_declaration, $.library_declaration),

    // --- Piece level (Parser::piece_decl) -------------------------------

    piece_declaration: ($) =>
      seq(
        'piece',
        field('name', $.string),
        '{',
        repeat(
          choice(
            $.import_statement,
            $.tempo_statement,
            $.meter_statement,
            $.key_statement,
            $.front_matter_statement,
            $.motif_declaration,
            $.fragment_declaration,
            $.score_declaration,
            $.performance_declaration,
            $.studio_declaration,
          ),
        ),
        '}',
      ),

    // Parser::library_decl — what can be shared: no score, no header.
    import_statement: ($) => seq('use', field('path', $.string), ';'),

    // Parser::front_matter_stmt — one shape, four heads.
    front_matter_statement: ($) =>
      seq(choice('subtitle', 'composer', 'arranger', 'copyright'), field('value', $.string), ';'),

    // Parser::tempo_stmt — a metronome mark, a tempo word, or both; a
    // gradual change adds where it arrives and how far it takes to get
    // there (prompt 73).
    tempo_statement: ($) =>
      seq(
        'tempo',
        choice(
          // The word may lead (`tempo "Andante";`) — and a gradual change
          // may still reach from it.
          seq(field('word', $.string), optional($.tempo_span)),
          seq(
            optional(field('beat', choice($.identifier, $.rational))),
            '=',
            field('bpm', $.integer),
            // `to 60` — where a gradual change arrives, in the same beat
            // unit. `to` rather than a keyword of its own, for the reason
            // `crescendo to f` reads: arriving somewhere is one idea.
            optional(seq('to', field('arrives', $.integer))),
            optional($.tempo_span),
            // The word may trail, for a marking that says both.
            optional(field('word', $.string)),
          ),
        ),
        ';',
      ),

    // `over 4/1` — how far a gradual change reaches.
    meter_statement: ($) => seq('meter', field('meter', $.rational), ';'),

    // Parser::key_stmt — `key a minor;`
    key_statement: ($) => seq('key', field('pitch_class', $.identifier), field('mode', $.identifier), ';'),

    // Parser::motif_decl — parameters inline, as in the hand parser: a
    // comma-joined run of `name: type (= default)?`, trailing comma allowed.
    motif_declaration: ($) =>
      seq(
        'motif',
        field('name', $.identifier),
        '(',
        optional(
          seq(
            $.motif_parameter,
            repeat(seq(',', $.motif_parameter)),
            optional(','),
          ),
        ),
        ')',
        field('body', $.block),
      ),

    // One `name: type (= default)?` of Parser::motif_decl's loop.
    fragment_declaration: ($) => seq('fragment', field('name', $.identifier), field('body', $.block)),

    // --- Score level (Parser::score_decl and below) ---------------------

    score_declaration: ($) =>
      seq(
        'score',
        '{',
        repeat(choice($.part_declaration, $.section_statement, $.harmony_declaration)),
        '}',
      ),

    part_declaration: ($) =>
      seq(
        'part',
        field('name', $.identifier),
        '{',
        repeat(choice($.clef_statement, $.profile_statement, $.voice_declaration)),
        '}',
      ),

    // Parser::clef_stmt.
    clef_statement: ($) => seq('clef', field('name', $.identifier), ';'),

    // Parser::profile_stmt — which profile realizes this part.
    profile_statement: ($) => seq('profile', field('name', $.identifier), ';'),

    // Parser::voice_decl — the braces are the declaration's own, no Block.
    voice_declaration: ($) =>
      seq('voice', field('name', $.identifier), '{', repeat(choice(...VOICE_ITEMS($))), '}'),

    // --- Performance level (Parser::performance_decl) -------------------

    studio_declaration: ($) =>
      seq(
        'studio',
        '{',
        repeat(
          choice(
            $.patch_declaration,
            $.bus_declaration,
            $.modulate_statement,
            $.assign_statement,
            $.route_statement,
            $.send_statement,
            $.signal_binding,
          ),
        ),
        '}',
      ),

    assign_statement: ($) =>
      seq('assign', field('source', $.identifier), '->', field('destination', $.identifier), ';'),
    route_statement: ($) =>
      seq('route', field('source', $.identifier), '->', field('destination', choice('master', $.identifier)), ';'),

    // Parser::send_stmt — `send <source> -> <bus> at <gain>;`
    block: ($) => seq('{', repeat(choice(...VOICE_ITEMS($))), '}'),

    // Parser::note_stmt — `<pitch-or-ref> <duration> <articulation>* ~? ;`
    note_statement: ($) =>
      seq(
        field('pitch', choice($.pitch_literal, $.identifier)),
        $.duration,
        optional($.articulation_list),
        optional('~'),
        ';',
      ),

    // Parser::articulations — their own node, by the hand parser's own rule:
    // a bare identifier here is an articulation, not a reference.
    duration: ($) =>
      seq(
        choice($.rational, $.integer, $.identifier),
        optional(seq('to', choice($.rational, $.integer, $.identifier))),
      ),

    rest_statement: ($) => seq('rest', $.duration, ';'),

    // Parser::chord_stmt — `chord [<pitch>, ...] <duration>;`
    use_statement: ($) =>
      seq(
        'use',
        field('name', $.identifier),
        optional(
          seq(
            '(',
            optional(
              seq(
                choice($.pitch_literal, $.identifier, $.rational, $.integer),
                repeat(seq(',', choice($.pitch_literal, $.identifier, $.rational, $.integer))),
              ),
            ),
            ')',
          ),
        ),
        choice(field('overrides', $.with_clause), ';'),
      ),

    // Parser::with_clause — `with { note <n> = <pitch>; ... }`
    transpose_statement: ($) =>
      seq('transpose', field('direction', choice('up', 'down')), field('interval', $.interval_literal), field('body', $.block)),

    // Parser::repeat_stmt — a count, or a range the realization chooses in.
    repeat_statement: ($) =>
      seq('repeat', field('count', $.integer), optional(seq('to', field('maximum', $.integer))), field('body', $.block)),

    // Parser::ending_stmt — `ending 1 { ... }`
    bar_statement: ($) => seq('bar', optional(field('name', $.identifier)), field('body', $.block)),

    phrase_statement: ($) => seq('phrase', field('name', $.string), field('body', $.block)),

    // Parser::hairpin_stmt — `crescendo to f { ... }`
    hairpin_statement: ($) =>
      seq(choice('crescendo', 'diminuendo'), 'to', field('dynamic', $.identifier), field('body', $.block)),

    // Parser::dynamic_stmt — `dynamic <mark>;`
    dynamic_statement: ($) => seq('dynamic', field('mark', $.identifier), ';'),

    // Parser::stretch_stmt — `stretch <n>/<d> { ... }`
    improvise_statement: ($) =>
      seq('improvise', $.duration, optional(seq('over', field('changes', $.string))), ';'),

    // --- Form markers (Parser::section_stmt, harmony_decl) ---------------

    // Parser::section_stmt — `section "Exposition" at 1:1;`
    section_statement: ($) => seq('section', field('name', $.string), 'at', $.position, ';'),

    harmony_declaration: ($) => seq('harmony', '{', repeat($.harmony_statement), '}'),

    // Parser::harmony_stmt — `at 1:1 am;`
    harmony_statement: ($) => seq('at', $.position, $.chord_symbol, ';'),

    // Parser::position — `<measure>:<beat>`
    position: ($) => seq(field('measure', $.integer), ':', field('beat', choice($.integer, $.rational))),

    // Parser::chord_symbol — one word, however it lexes.
    chord_symbol: ($) => seq(choice($.identifier, $.pitch_literal), optional($.integer)),

    // --- Tokens (crates/musa-language/src/lexer.rs) ----------------------

    // `[a-g](ss|ff|[sfn])?-?[0-9]+` — a written pitch: letter, accidental,
    // octave.
    pitch_literal: ($) => /[a-g](ss|ff|[sfn])?-?[0-9]+/,

    // `[PMm][0-9]+` — an interval: quality and size.
    interval_literal: ($) => /[PMm][0-9]+/,

    rational: ($) => /[0-9]+\/[0-9]+/,
    integer: ($) => /[0-9]+/,
    identifier: ($) => /[a-zA-Z_]+/,

    // `"([^"\\\n]|\\[^\n])*"` — one quoted line. An unterminated quote is
    // error recovery's business, exactly as the hand lexer leaves it.
    string: ($) => /"([^"\\\n]|\\[^\n])*"/,

    // The units the parser's rules consume: `Hz`, `ms`, `s`, `dB`. (`bpm`
    // lexes but no rule reads it yet; it joins when one does.)
    comment: ($) =>
      choice(
        // `//[^\n]*`
        /\/\/[^\n]*/,
        // `(?s)/\*([^*]|\*[^/])*\*/`
        // `(?s)/\*([^*]|\*[^/])*\*/` — the flag needs no spelling here: the
        // classes are negations, which match newlines in both regex flavors.
        /\/\*([^*]|\*[^/])*\*\//,
      ),
  },
});
