editors/tree-sitter-musa/test/corpus/changes.txt
================================================================================
changes
================================================================================

// A chart: head, solos, head out. What a jazz musician hands another jazz
// musician, and the reason `improvise` exists — the middle of this piece is
// notated as a frame with nothing inside it, because the notes are the
// player's and musa does not invent notes.
//
//     musa check examples/changes.musa --seed 3
//     musa render examples/changes.musa --to musicxml
//
// The export is lossy on purpose and says so: MusicXML has no improvised
// region, so it carries the realized silence plus a text direction reading
// `improvise over Dm7 | G7 | Cmaj7`. A player reading the exported part sees
// the instruction; a program reading it sees a rest. That is stated in
// `docs/kernel/07-backend-contract.md` rather than discovered.
//
// The last chord is `1 to 4/1`: held as long as the band likes. Its written
// value is the whole note the engraver draws; what it sounds is the
// performance's answer. Roadmap §2's row — notated duration ≠ performed
// duration — with both values kept.
piece "Changes" {
    composer "musa";

    tempo 1/4 = 132;
    meter 4/4;
    key c major;

    // The head: eight bars over a ii-V-I.
    fragment head {
        d5/4
        f5/4
        a5/4
        c6/4
        b5/2
        g5/2
        g5/4
        b5/4
        d6/4
        f6/4
        e6/1
        c6/4
        a5/4
        g5/4
        e5/4
        d5/2
        f5/2
        e5/4
        g5/4
        b5/4
        d6/4
        c6/1
    }

    // The bass line under each section. Written as material because the horn
    // does not repeat with it, and a repeat barline crosses the system.
    fragment walk_head {
        repeat 8 {
            d3/4
            f3/4
            a3/4
            c4/4
        }
    }
    fragment walk_solo {
        repeat 16 {
            d3/4
            f3/4
            g3/4
            b3/4
        }
    }

    score {
        part horn {
            voice lead {
                use head;
                improvise 16/1 over "Dm7 | G7 | Cmaj7 | Cmaj7";
                use head;
                c6/1 to 4/1
            }
        }

        part bass {
            voice walk {
                use walk_head;
                use walk_solo;
                use walk_head;
                c3/1 to 4/1
            }
        }
    }
}

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (piece_declaration
    (string)
    (front_matter_statement
      (string))
    (tempo_statement
      (rational)
      (integer))
    (meter_statement
      (rational))
    (key_statement
      (pitch_class
        (identifier))
      (identifier))
    (comment)
    (fragment_declaration
      (identifier)
      (block
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))
        (note_statement
          (pitch_literal)
          (duration
            (integer)))))
    (comment)
    (comment)
    (fragment_declaration
      (identifier)
      (block
        (repeat_statement
          (integer)
          (block
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))))))
    (fragment_declaration
      (identifier)
      (block
        (repeat_statement
          (integer)
          (block
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))))))
    (score_declaration
      (part_declaration
        (identifier)
        (voice_declaration
          (identifier)
          (use_statement
            (expression
              (name_expression
                (identifier))))
          (improvise_statement
            (duration
              (rational))
            (string))
          (use_statement
            (expression
              (name_expression
                (identifier))))
          (note_statement
            (pitch_literal)
            (duration
              (integer)
              (rational)))))
      (part_declaration
        (identifier)
        (voice_declaration
          (identifier)
          (use_statement
            (expression
              (name_expression
                (identifier))))
          (use_statement
            (expression
              (name_expression
                (identifier))))
          (use_statement
            (expression
              (name_expression
                (identifier))))
          (note_statement
            (pitch_literal)
            (duration
              (integer)
              (rational))))))))
