editors/tree-sitter-musa/test/corpus/changing-meter.txt
================================================================================
changing-meter
================================================================================

// A Balkan-flavoured dance tune: the phrase is in 7/8 and the refrain answers
// in 4/4, which is ordinary in folk music and was inexpressible in musa until
// the meter learned to change where the music changes.
//
// The `meter` statements are written among the voice's own items, at the
// place they take effect — not as a coordinate, because a measure number is a
// position in bars and where the bars fall is what the meter decides.
piece "Changing Meter" {
    composer "traditional";
    arranger "musa";

    tempo 1/4 = 132;
    meter 7/8;
    key d minor;

    score {
        part fiddle {
            clef treble;

            voice tune {
                bar { d5 1/4; e5 1/4; f5 1/8; g5 1/8; a5 1/8; }
                bar { a5 1/4; g5 1/4; f5 3/8; }

                meter 4/4;
                bar { d5 1/4; d5 1/4; a4 1/4; d5 1/4; }
                bar { f5 1/2; e5 1/2; }

                meter 7/8;
                bar { d5 1/8; e5 1/8; f5 1/8; g5 1/8; a5 1/8; g5 1/8; f5 1/8; }
                bar { e5 1/4; d5 1/4; d5 3/8; }
            }
        }
    }
}

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (piece_declaration
    (string)
    (front_matter_statement
      (string))
    (front_matter_statement
      (string))
    (tempo_statement
      (rational)
      (integer))
    (meter_statement
      (rational))
    (key_statement
      (pitch_class
        (identifier))
      (identifier))
    (score_declaration
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (voice_declaration
          (identifier)
          (bar_statement
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))))
          (bar_statement
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))))
          (meter_statement
            (rational))
          (bar_statement
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))))
          (bar_statement
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))))
          (meter_statement
            (rational))
          (bar_statement
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))))
          (bar_statement
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational)))
              (note_statement
                (pitch_literal)
                (duration
                  (rational))))))))))
