editors/tree-sitter-musa/test/corpus/clef-change.txt
================================================================================
clef-change
================================================================================

// A cello line that crosses into the treble staff and back. The clef change
// is the one context change that is not a barline event: it happens where the
// player's hand arrives, in the middle of a measure, and the engraver draws a
// small clef before the note it affects.
//
// It is also the one context change that is a *part's* business — no key or
// meter written elsewhere reaches it — which is why it is scoped to the part
// and the others are scoped to the piece.
piece "Clef Change" {
    composer "musa";

    tempo 1/4 = 72;
    meter 4/4;
    key c major;

    score {
        part cello {
            clef bass;

            voice line {
                | c3/4 g3/4 c4/4 e4/4
                | g4/4 a4/4 clef treble; c5/4 e5/4
                | g5/2 e5/4 c5/4
                | g4/4 e4/4 clef bass; c4/4 c3/4
            }
        }
    }
}

---

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (piece_declaration
    (string)
    (front_matter_statement
      (string))
    (tempo_statement
      (rational)
      (integer))
    (meter_statement
      (rational))
    (key_statement
      (pitch_class
        (identifier))
      (identifier))
    (score_declaration
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (voice_declaration
          (identifier)
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer))))
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (clef_statement
              (identifier))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer))))
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer))))
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (clef_statement
              (identifier))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer)))))))))
